// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockaidIndicator should render correctly 1`] = `
Array [
  <View
    collapsable={false}
    forwardedRef={[Function]}
    style={Object {}}
  >
    <View
      style={
        Object {
          "marginBottom": 10,
          "marginHorizontal": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-end",
              "flex": 1,
            }
          }
        >
          <SvgMock
            color="#F66A0A"
            height={32}
            name="Danger"
            style={
              Object {
                "alignSelf": "center",
                "height": 32,
                "marginTop": 10,
                "width": 32,
              }
            }
            width={32}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "space-between",
            "margin": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#24272A",
              "fontFamily": "Euclid Circular B",
              "fontSize": 18,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Before you proceed
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
            }
          }
        />
      </View>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#24272A",
            "fontFamily": "Euclid Circular B",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        To enable this feature we need to set up some security alert. This page will need to stay open while its being set up. This will take less than a minute to complete.
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-around",
            "marginTop": 20,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderColor": "#0376C9",
              "borderRadius": 20,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": 150,
            }
          }
          variant="Secondary"
        >
          <Text
            accessibilityRole="text"
            style={
              Object {
                "color": "#0376C9",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#0376C9",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": 150,
            }
          }
          variant="Primary"
        >
          <Text
            accessibilityRole="text"
            style={
              Object {
                "color": "#FCFCFC",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Continue
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>,
  ",",
]
`;

exports[`BlockaidIndicator should render correctly if PPOM initialisation failed 1`] = `
Array [
  <View
    collapsable={false}
    forwardedRef={[Function]}
    style={Object {}}
  >
    <View
      style={
        Object {
          "marginBottom": 10,
          "marginHorizontal": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-end",
              "flex": 1,
            }
          }
        >
          <SvgMock
            color="#F66A0A"
            height={32}
            name="Danger"
            style={
              Object {
                "alignSelf": "center",
                "height": 32,
                "marginTop": 10,
                "width": 32,
              }
            }
            width={32}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "space-between",
            "margin": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#24272A",
              "fontFamily": "Euclid Circular B",
              "fontSize": 18,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Before you proceed
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
            }
          }
        />
      </View>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#24272A",
            "fontFamily": "Euclid Circular B",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        To enable this feature we need to set up some security alert. This page will need to stay open while its being set up. This will take less than a minute to complete.
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-around",
            "marginTop": 20,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderColor": "#0376C9",
              "borderRadius": 20,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": 150,
            }
          }
          variant="Secondary"
        >
          <Text
            accessibilityRole="text"
            style={
              Object {
                "color": "#0376C9",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#0376C9",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": 150,
            }
          }
          variant="Primary"
        >
          <Text
            accessibilityRole="text"
            style={
              Object {
                "color": "#FCFCFC",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Continue
          </Text>
        </TouchableOpacity>
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 10,
          "marginHorizontal": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-end",
              "flex": 1,
            }
          }
        >
          <SvgMock
            color="#D73847"
            height={32}
            name="Danger"
            style={
              Object {
                "alignSelf": "center",
                "height": 32,
                "marginTop": 10,
                "width": 32,
              }
            }
            width={32}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "space-between",
            "margin": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#24272A",
              "fontFamily": "Euclid Circular B",
              "fontSize": 18,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Something went wrong
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
            }
          }
        />
      </View>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#24272A",
            "fontFamily": "Euclid Circular B",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        We could not finish setting up the security alerts. Check your internet connection and try again.
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-around",
            "marginTop": 20,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderColor": "#0376C9",
              "borderRadius": 20,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": 150,
            }
          }
          variant="Secondary"
        >
          <Text
            accessibilityRole="text"
            style={
              Object {
                "color": "#0376C9",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#0376C9",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": 150,
            }
          }
          variant="Primary"
        >
          <Text
            accessibilityRole="text"
            style={
              Object {
                "color": "#FCFCFC",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Try Again
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>,
  ",",
]
`;
